--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -1,12 +1,11 @@
 ---
-import { Image } from "astro:assets";
 
-import Foto from "/public/images/avatar-jessica.jpeg";
 ---
 
 
 	<div class="flex flex-col items-center p-4">
-		<Image src={Foto} loading="eager" alt="Imagen Principal" class="rounded-full size-1/4 mx-auto my-3 hover:size-1/3" />
+		<img src="public/images/avatar-jessica.jpeg"  alt="Imagen Principal" class="rounded-full size-1/4 mx-auto my-3 hover:size-1/3" />
+
 		<div class="w-11/12 flex flex-wrap flex-col justify-center">
 			<h1 class="text-White text-center mb-1 text-2xl font-semibold hover:text-Green">Jessica Randall</h1>
 			<h2 class="text-Green text-center text-sm mb-3 font-semibold hover:text-White">London, United Kingdom</h2>
