--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -4,7 +4,7 @@
 
 
 	<div class="flex flex-col items-center p-4">
-		<img src="public/images/avatar-jessica.jpeg"  alt="Imagen Principal" class="rounded-full size-1/4 mx-auto my-3 hover:size-1/3" />
+		<img src="/images/avatar-jessica.jpeg"  alt="Imagen Principal" class="rounded-full size-1/4 mx-auto my-3 hover:size-1/3" />
 
 		<div class="w-11/12 flex flex-wrap flex-col justify-center">
 			<h1 class="text-White text-center mb-1 text-2xl font-semibold hover:text-Green">Jessica Randall</h1>
