--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="py-52 lg:py-[10.5rem]">
-		<div class="bg-DarkGrey w-11/12 my-0 mx-auto rounded-2xl lg:w-[25%]">
+		<div class="bg-DarkGrey w-11/12 my-0 mx-auto rounded-2xl lg:w-[25%] py-8">
 			<slot />
 		</div>		
 	</body>
